Add find by last name logic