@@ -11,12 +11,12 @@ import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import saron.springframework.petclinic.model.Owner;
 import saron.springframework.petclinic.services.OwnerService;
 
-import java.util.HashSet;
-import java.util.Set;
+import java.util.List;
 
-import static org.hamcrest.Matchers.hasProperty;
-import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.*;
 import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
@@ -38,33 +38,39 @@ class OwnerControllerTest {
     }
 
     @Test
-    void listOwners() throws Exception {
-        when(ownerService.findAll()).thenReturn(new HashSet<>(Set.of(getOwner())));
-        mockMvc.perform(get("/owners/index"))
+    void findOwners() throws Exception {
+        mockMvc.perform(get("/owners/find"))
                 .andExpect(status().isOk())
-                .andExpect(view().name("owners/index"))
-                .andExpect(model().attributeExists("owners"));
+                .andExpect(view().name("owners/findOwners"))
+                .andExpect(model().attributeExists("owner"));
+        verifyNoInteractions(ownerService);
     }
 
-//    @Test
-//    void processFindFormReturnMany() throws Exception {
-//        when(ownerService.findByLastName(anyString()))
-//                .thenReturn(Arrays.asList(getOwner(),getOwner()));
-//
-//        mockMvc.perform(get("/owners"))
-//                .andExpect(status().isOk())
-//                .andExpect(view().name("owners/ownersList"))
-//                .andExpect(model().attribute("selections", hasSize(2)));
-//    }
-//
-//    @Test
-//    void processFindFormReturnOne() throws Exception {
-//        when(ownerService.findByLastName(anyString())).thenReturn(Arrays.asList(getOwner()));
-//
-//        mockMvc.perform(get("/owners"))
-//                .andExpect(status().is3xxRedirection())
-//                .andExpect(view().name("redirect:/owners/1"));
-//    }
+    @Test
+    void processFindFormReturnMany() throws Exception {
+        when(ownerService.findAllByLastNameLike(anyString())).thenReturn(List.of(getOwner(), getOwner()));
+        mockMvc.perform(get("/owners"))
+                .andExpect(status().isOk())
+                .andExpect(view().name("owners/ownersList"))
+                .andExpect(model().attribute("selections", hasSize(2)));
+    }
+
+    @Test
+    void processFindFormReturnOne() throws Exception {
+        when(ownerService.findAllByLastNameLike(anyString())).thenReturn(List.of(getOwner()));
+        mockMvc.perform(get("/owners"))
+                .andExpect(status().is3xxRedirection())
+                .andExpect(view().name("redirect:/owners/1"));
+    }
+
+    @Test
+    void displayOwner() throws Exception {
+        when(ownerService.findById(anyLong())).thenReturn(getOwner());
+        mockMvc.perform(get("/owners/123"))
+                .andExpect(status().isOk())
+                .andExpect(view().name("owners/ownerDetails"))
+                .andExpect(model().attribute("owner", hasProperty("id", is(1L))));
+    }
 //
 //    @Test
 //    void processFindFormEmptyReturnMany() throws Exception {
@@ -75,15 +81,6 @@ class OwnerControllerTest {
 //                .andExpect(view().name("owners/ownersList"))
 //                .andExpect(model().attribute("selections", hasSize(2)));
 //    }
-
-    @Test
-    void displayOwner() throws Exception {
-        when(ownerService.findById(anyLong())).thenReturn(getOwner());
-        mockMvc.perform(get("/owners/123"))
-                .andExpect(status().isOk())
-                .andExpect(view().name("owners/ownerDetails"))
-                .andExpect(model().attribute("owner", hasProperty("id", is(1L))));
-    }
 
 //    @Test
 //    void initCreationForm() throws Exception {
